--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,7 +52,7 @@ docs = [
 spm = "pynxtools_spm.reader:SPMReader"
 
 [project.entry-points."nomad.plugin"]
-sts_example_with_customization = "pynxtools_spm.nomad.entrypoints:sts_example"
+sts_example = "pynxtools_spm.nomad.entrypoints:sts_example"
 stm_example_with_customization = "pynxtools_spm.nomad.entrypoints:stm_example"
 afm_example_with_customization = "pynxtools_spm.nomad.entrypoints:afm_example"   
 
