--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,8 +53,8 @@ spm = "pynxtools_spm.reader:SPMReader"
 
 [project.entry-points."nomad.plugin"]
 sts_example = "pynxtools_spm.nomad.entrypoints:sts_example"
-stm_example_with_customization = "pynxtools_spm.nomad.entrypoints:stm_example"
-afm_example_with_customization = "pynxtools_spm.nomad.entrypoints:afm_example"   
+stm_example = "pynxtools_spm.nomad.entrypoints:stm_example"
+afm_example = "pynxtools_spm.nomad.entrypoints:afm_example"   
 
 
 [tool.setuptools.packages.find]
