--- a/src/pynxtools_spm/nomad/examples/sts/STSExampleWithCustomization/eln_data.yaml
+++ b/src/pynxtools_spm/nomad/examples/sts/STSExampleWithCustomization/eln_data.yaml
@@ -1,32 +1,35 @@
 Sample:
   History:
     notes: <p>Sample history goes here.</p>
-  description: <p>Sample Description</p>
-  name: DemoName
+  chemical_formula: Au
+  name: Gold
   sample_component_set:
     sample_component:
-      description: <p>Sample component description.</p>
-      name: Sample Component
+      description: <p>Description of the sample component</p>
+      name: DemoSampleComponent
 collection_identifier:
-  identifier: STSCollectionIdentifier-1
+  identifier: C:\Users\SPM-PEEM\Desktop\DATA_Nanonis\20220711_CreaTec_Service_Benchmarks_LHe\Nanonis-Session-PMD100-HVHU_CreaTec_Service_PalmaLabBerlin220711
 default: current_grad
 definition: NXsts
-experiment_description: <p>Experiment description is here.</p>
+experiment_description: '<p>Experiment with<br />Setpoints: 50pA</p>
+
+  <p>Bias: 100mV</p>
+
+  <p>Comment: SYNC &amp; Filter LP 8order WITHDRAW 600 steps, locked Au(111), 50pA,
+  100 mV set point, 1mV DCA, 973Hz,138 1st H, -84 2nd H</p>'
 experiment_identifier:
-  identifier: STSExperimentIdentifier-1
+  identifier: C:\Users\SPM-PEEM\Desktop\DATA_Nanonis\20220711_CreaTec_Service_Benchmarks_LHe\Nanonis-Session-PMD100-HVHU_CreaTec_Service_PalmaLabBerlin
 experiment_instrument:
   hardware:
+    model: Generic 5e
     name: Nanonis
     vendor: Nanonis
   lockin_amplifier:
     lockin_current_flip_sign: -1.0
     modulation_signal: current
-  scan_environment:
-    tip_temp:
-      unit: K
-      value: 100.0
   software:
     model: Generic 5e
+    model/@version: 5e
     name: Nanonis
     vendor: Nanonis
 experiment_technique: STS
@@ -35,4 +38,4 @@ user:
   - HU
   email:
   - rubel.mozumder@physik.hu-berlin.de
-  name: Rubel Mozumder
+  name: Rubel Mozumer
