--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "mypy",
-    "ruff>=0.6",
+    "ruff>=0.8.3",
     "pytest",
     "pip-tools",
 ]
@@ -52,12 +52,9 @@ docs = [
 spm = "pynxtools_spm.reader:SPMReader"
 
 [project.entry-points."nomad.plugin"]
-sts_default_example = "pynxtools_spm.nomad.entrypoints:sts_default_example"
-sts_example_with_customization = "pynxtools_spm.nomad.entrypoints:sts_example_with_customization"
-stm_default_example = "pynxtools_spm.nomad.entrypoints:stm_default_example"
-stm_example_with_customization = "pynxtools_spm.nomad.entrypoints:stm_example_with_customization"
-afm_default_example = "pynxtools_spm.nomad.entrypoints:afm_default_example" 
-afm_example_with_customization = "pynxtools_spm.nomad.entrypoints:afm_example_with_customization"   
+sts_example = "pynxtools_spm.nomad.entrypoints:sts_example"
+stm_example = "pynxtools_spm.nomad.entrypoints:stm_example"
+afm_example = "pynxtools_spm.nomad.entrypoints:afm_example"
 
 
 [tool.setuptools.packages.find]
