--- a/src/pynxtools_spm/nomad/examples/afm/AFMDefaultExample/eln_data.yaml
+++ b/src/pynxtools_spm/nomad/examples/afm/AFMDefaultExample/eln_data.yaml
@@ -1,23 +1,17 @@
 Sample:
   History:
     notes: <p>Sample History</p>
-  name: 'SampleName '
+  description: <p>Sample Description.</p>
+  name: DemoName
   sample_component_set:
     sample_component:
       description: <p>Description</p>
       name: DemoComponent
 collection_identifier:
-  identifier: C:\AFM\_data\201510
+  identifier: DemoCollectionIdentifier-1234
 default: current_forward
 definition: NXafm
-experiment_description: '<p>The experiment is performed with a cantilever that has
-  a center frequency of 22.63 kHz</p>
-
-  <p>The Lockin setup is off.<br />The setpoint for Z-controller is 50pA.</p>
-
-  <p>Bias is -9.000E-4 V.</p>
-
-  <p>&nbsp;</p>'
+experiment_description: <p>Experiment Description</p>
 experiment_identifier:
   identifier: DemoExperimentIdentifier-1234
 experiment_instrument:
@@ -36,5 +30,4 @@ user:
   - HU
   email:
   - rubel.mozumder@physik.hu-berlin.de
-  - cojal@physik.hu-berlin.de
   name: Rubel Mozumder
