--- a/src/pynxtools_spm/nomad/examples/sts/STSDefaultExample/eln_data.yaml
+++ b/src/pynxtools_spm/nomad/examples/sts/STSDefaultExample/eln_data.yaml
@@ -1,24 +1,19 @@
 Sample:
   History:
     notes: <p>Sample history goes here.</p>
-  chemical_formula: Au
-  name: Gold
+  description: <p>Sample description is here.</p>
+  name: DemoSample
   sample_component_set:
     sample_component:
       description: <p>Description of the sample component</p>
       name: DemoSampleComponent
 collection_identifier:
-  identifier: C:\Users\SPM-PEEM\Desktop\DATA_Nanonis\20220711_CreaTec_Service_Benchmarks_LHe\Nanonis-Session-PMD100-HVHU_CreaTec_Service_PalmaLabBerlin220711
+  identifier: STSCollectionIdentifier-1234
 default: current_grad
 definition: NXsts
-experiment_description: '<p>Experiment with<br />Setpoints: 50pA</p>
-
-  <p>Bias: 100mV</p>
-
-  <p>Comment: SYNC &amp; Filter LP 8order WITHDRAW 600 steps, locked Au(111), 50pA,
-  100 mV set point, 1mV DCA, 973Hz,138 1st H, -84 2nd H</p>'
+experiment_description: <p>The experiment description is here.</p>
 experiment_identifier:
-  identifier: C:\Users\SPM-PEEM\Desktop\DATA_Nanonis\20220711_CreaTec_Service_Benchmarks_LHe\Nanonis-Session-PMD100-HVHU_CreaTec_Service_PalmaLabBerlin
+  identifier: STSExperimentIdentifier-1234
 experiment_instrument:
   hardware:
     model: Generic 5e
