--- a/tests/data/nanonis/afm/version_gen_4_with_described_nxdata/eln_data.yaml
+++ b/tests/data/nanonis/afm/version_gen_4_with_described_nxdata/eln_data.yaml
@@ -1,25 +1,18 @@
 Sample:
   History:
-    notes: <p>Sample History</p>
-  name: 'SampleName '
+    notes: <p>Sample History.</p>
+  description: <p>Description.</p>
+  name: Demo Name
   sample_component_set:
     sample_component:
-      description: <p>Description</p>
-      name: DemoComponent
+      name: ComponentName
 collection_identifier:
-  identifier: C:\AFM\_data\201510
+  identifier: DemoCollectionIdentifier-12345
 default: current_forward
 definition: NXafm
-experiment_description: '<p>The experiment is performed with a cantilever that has
-  a center frequency of 22.63 kHz</p>
-
-  <p>The Lockin setup is off.<br />The setpoint for Z-controller is 50pA.</p>
-
-  <p>Bias is -9.000E-4 V.</p>
-
-  <p>&nbsp;</p>'
+experiment_description: <p>Experiment Description.</p>
 experiment_identifier:
-  identifier: DemoExperimentIdentifier-1234
+  identifier: DemoExperimentIdentifier-12345
 experiment_instrument:
   hardware:
     name: Nanonis
@@ -30,11 +23,6 @@ experiment_instrument:
     name: Nanonis
     vendor: Nanonis
 experiment_technique: AFM
-scan_mode: tapping mode
+scan_mode: contact mode
 user:
-  affiliation:
-  - HU
-  email:
-  - rubel.mozumder@physik.hu-berlin.de
-  - cojal@physik.hu-berlin.de
   name: Rubel Mozumder
