--- a/tests/data/nanonis/stm/version_gen_4_5_default_config/eln_data.yaml
+++ b/tests/data/nanonis/stm/version_gen_4_5_default_config/eln_data.yaml
@@ -2,29 +2,18 @@ Sample:
   History:
     notes: <p>Sample History goes here.</p>
   description: <p>Sample description.</p>
-  name: diPAMY
+  name: DemoSample
   sample_component_set:
     sample_component:
       description: <p>Component Description goes here.</p>
       name: DemoComponent
 collection_identifier:
-  identifier: D:\DATA\nanonis V45_sessions\Zurich PLL\2023-03-31
+  identifier: DemoCollectionIdentifier-1234
 default: current_forward
 definition: NXstm
-experiment_description: '<p>Experiment with</p>
-
-  <p>Bias: 50mV</p>
-
-  <p>Setpoint: 500pA</p>
-
-  <p>Comment: &nbsp;</p>
-
-  <p>&nbsp; &nbsp;Lockin:</p>
-
-  <p>&nbsp; &nbsp; voltage: 10mV (Rms Frequency 831Hz, Phase -31.5deg) S 50mV Tcons
-  10mS</p>'
+experiment_description: <p>Experiment Description</p>
 experiment_identifier:
-  identifier: D:\DATA\nanonis V45_sessions\Zurich PLL\2023-03-31\2023_03_31_oAu(111)__FeBr2_EP1_018.sxm
+  identifier: DemoExperimentIdentifier-1234
 experiment_instrument:
   hardware:
     model: Generic 4.5
@@ -38,5 +27,4 @@ user:
   - HU
   email:
   - rubel,.mozumder@physik.hu-berlin.de
-  - cojal@physik.hu-berlin.de
   name: Rubel Mozumder
