--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ classifiers = [
 dependencies = [
     "findiff",
     "pynxtools>=0.9.2",
+    "nomad-lab[parsing, infrastructure]==1.3.14.dev178+ge1174818c",
     # "pySPM==0.6.2",  # SPM file reader for Bruker files use it when you have Bruker files
     "pint"
 ]
