--- a/.github/workflows/backward_compatibility.yml
+++ b/.github/workflows/backward_compatibility.yml
@@ -28,6 +28,7 @@ jobs:
           python -m pip install coverage coveralls
       - name: Install pynxtools-spm
         run: |
+          pip install .
           pip install -r dev-requirements.txt
       - name: Install pynxtools version ${{ matrix.pynxtools_versions }}
         run: |
