Test Ci/Cd (#19)
* Test Ci/Cd

* Include nomad test branch.

* include nomad.

* fix type.

* add pynxtools-spm.

* Temporarily stom sts test.

* update python version.

* lint

--- a/.github/workflows/backward_compatibility.yml
+++ b/.github/workflows/backward_compatibility.yml
@@ -28,7 +28,8 @@ jobs:
           python -m pip install coverage coveralls
       - name: Install pynxtools-spm
         run: |
-          pip install .[dev]
+          pip install .
+          pip install -r dev-requirements.txt
       - name: Install pynxtools version ${{ matrix.pynxtools_versions }}
         run: |
          if [ "${{ matrix.pynxtools_versions }}" == "master" ]; then
