--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ classifiers = [
 dependencies = [
     "findiff",
     "pynxtools>=0.9.2",
+    "nomad-lab[parsing, infrastructure]@git+https://gitlab.mpcdf.mpg.de/nomad-lab/nomad-FAIR.git@develop",
     # "pySPM==0.6.2",  # SPM file reader for Bruker files use it when you have Bruker files
     "pint"
 ]
