--- a/.github/workflows/backward_compatibility.yml
+++ b/.github/workflows/backward_compatibility.yml
@@ -20,18 +20,25 @@ jobs:
         with:
           fetch-depth: 0
           submodules: recursive
+
       - name: Install uv && Set up Python $${{ matrix.python-versions }}
         uses: astral-sh/setup-uv@v5
         with:
           python-version: ${{ matrix.python-versions }}
           version: "0.6.2"
+
+      - name: Install Python
+        run: uv python install
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           python -m pip install coverage coveralls
+
       - name: Install pynxtools-spm
         run: |
           uv sync --all-extras --dev
+
       - name: Install pynxtools version ${{ matrix.pynxtools_versions }}
         run: |
          if [ "${{ matrix.pynxtools_versions }}" == "master" ]; then
@@ -39,6 +46,7 @@ jobs:
          else
           uv run pip install pynxtools==${{ matrix.pynxtools_versions }}
          fi
+
       - name: Run tests
         run: |
           uv run pytest tests/.
