Update Reorganise ci/cd pipeline.

--- a/.github/workflows/publish_compatibility_with_pynxtools.yml
+++ b/.github/workflows/publish_compatibility_with_pynxtools.yml
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  backward_compatibility:
+  publish_compatibility:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
