--- a/.github/workflows/backward_compatibility.yml
+++ b/.github/workflows/backward_compatibility.yml
@@ -27,8 +27,6 @@ jobs:
           python-version: ${{ matrix.python-versions }}
           version: "0.6.2"
 
-      - name: Install Python
-        run: uv python install
 
       - name: Install pip in the virtual environment
         run: |
@@ -39,15 +37,21 @@ jobs:
         if: "${{ matrix.python_version != '3.8'}}"
         run: |
           uv run pip install nomad-lab[infrastructure]@git+https://gitlab.mpcdf.mpg.de/nomad-lab/nomad-FAIR.git
+          uv run which python
+          uv run python --version
+
 
       - name: Install dependencies
         run: |
           uv run python -m pip install --upgrade pip
           uv run python -m pip install coverage coveralls
+          uv run which python
 
       - name: Install pynxtools-spm
         run: |
           uv run pip install .[dev]
+          uv run wich python
+          uv run pip list | grep pynxtools
 
       - name: Install pynxtools version ${{ matrix.pynxtools_versions }}
         run: |
@@ -60,18 +64,15 @@ jobs:
           echo "####### released Installing pynxtools from master branch."
           uv run pip install pynxtools==${{ matrix.pynxtools_versions }}
          fi
-         command -v python
-         python --version
-         echo "### Running Check dep"
+         uv run which python
+         uv run pip list | grep pynxtools
 
       - name: Run Reader tests
         run: |
           echo "### Running Check dependencies."
-          command -v python
-          python --version
-          echo "### Running Check dependencies."
-          uv run pip list
           uv run which python
+          uv run pip list | grep pynxtools
+          echo "#####"
           uv run pytest tests/test_reader.py
 
       - name: Run Nomad Examples tests
