--- a/.github/workflows/publish_compatibility.yml
+++ b/.github/workflows/publish_compatibility.yml
@@ -1,4 +1,4 @@
-name: pytest
+name: Backward Compatibility with Pynxtools
 
 on:
   push:
@@ -6,31 +6,40 @@ on:
   pull_request:
     branches: [main]
 
-env:
-  UV_SYSTEM_PYTHON: true
-  
 jobs:
-  pytest:
+  backward_compatibility:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
+      # TODO check Disable this test from block merge request
       matrix:
-        python_version: ["3.10", "3.11", "3.12"]
+        # pynxtools_versions: ["master", "latest_release", "v0.9.3"]
         pynxtools_versions: ["master"]
-
+        python-versions: ["3.11"]
+ 
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
           submodules: recursive
-      - name: Set up Python ${{matrix.python_version}}
-        uses: actions/setup-python@v5
+      
+      - name: Install uv && Set up Python ${{ matrix.python-versions }}
+        uses: astral-sh/setup-uv@v5
         with:
-          python-version: ${{matrix.python_version}}
-      - name: Install uv
+          python-version: ${{ matrix.python-versions }}
+          version: "0.6.2"
+
+      - name: Install nomad
+        if: "${{ matrix.python_versions != '3.8'}}"
         run: |
-          python -m pip install --upgrade pip
-          curl -LsSf https://astral.sh/uv/install.sh | sh
+          uv pip uninstall nomad-lab -q
+          uv pip install nomad-lab[infrastructure]@git+https://gitlab.mpcdf.mpg.de/nomad-lab/nomad-FAIR.git
+
+      - name: Install dependencies
+        run: |
+          uv pip install --upgrade pip
+          uv pip install coverage coveralls
+
       - name: Install pynxtools version ${{ matrix.pynxtools_versions }}
         run: |
           PYNXTOOLS_VERSION="${{ matrix.pynxtools_versions }}"
@@ -43,17 +52,15 @@ jobs:
           else
            uv pip install pynxtools==${{ matrix.pynxtools_versions }}
           fi
-      - name: Install nomad
-        if: "${{ matrix.python_version != '3.8'}}"
+
+      - name: Install pynxtools-spm
         run: |
-          uv pip install nomad-lab[infrastructure]@git+https://gitlab.mpcdf.mpg.de/nomad-lab/nomad-FAIR.git
-      - name: Install package and dependencies
-        run: |
-          uv pip install ".[dev]"
-      - name: Test pynxtools data conversion
+          uv pip install .[dev]
+
+      - name: Run Reader tests
         run: |
           pytest tests/test_reader.py
-      - name: Test Nomad Examples
-        if: "${{ matrix.python_version != '3.8'}}"
+
+      - name: Run Nomad Examples tests
         run: |
           pytest tests/test_nomad_examples.py
