--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -16,6 +16,7 @@ jobs:
       fail-fast: false
       matrix:
         python_version: ["3.10", "3.11", "3.12"]
+        pynxtools_versions: ["master"]
 
     steps:
       - uses: actions/checkout@v4
@@ -30,6 +31,18 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           curl -LsSf https://astral.sh/uv/install.sh | sh
+      - name: Install pynxtools version ${{ matrix.pynxtools_versions }}
+        run: |
+          PYNXTOOLS_VERSION="${{ matrix.pynxtools_versions }}"
+          uv pip uninstall pynxtools -q
+          if [ "$PYNXTOOLS_VERSION" == "master" ]; then
+            uv pip install pynxtools@git+https://github.com/FAIRmat-NFDI/pynxtools@${{ matrix.pynxtools_versions }}
+        
+          elif [ "$PYNXTOOLS_VERSION" == "latest_release" ]; then
+            uv pip install pynxtools
+          else
+           uv pip install pynxtools==${{ matrix.pynxtools_versions }}
+          fi
       - name: Install nomad
         if: "${{ matrix.python_version != '3.8'}}"
         run: |
