--- a/src/pynxtools_spm/nomad/examples/sts/STSExampleWithCustomization/config.json
+++ b/src/pynxtools_spm/nomad/examples/sts/STSExampleWithCustomization/config.json
@@ -404,7 +404,7 @@
                 }
               }
             ],
-            "2nd_order_correction_N[2nd_order_correction_n]": [
+            "second_order_correction_N[2nd_order_correction_n]": [
               {
                 "x": {
                   "raw_path": "/Piezo Configuration/2nd order corr X/value",
@@ -513,13 +513,13 @@
               "raw_path": "/Z-Controller/Z/value",
               "@units": "/Z-Controller/Z/unit"
             },
-            "K_i_value[k_i_value]": {
+            "K_i_value[K_i_value]": {
               "raw_path": "/Z-Controller/I gain/value"
             },
-            "K_p_value[k_p_value]": {
+            "K_p_value[K_p_value]": {
               "raw_path": "/Z-Controller/P gain/value"
             },
-            "K_t_const[k_t_const]": {
+            "K_t_const[K_t_const]": {
               "raw_path": "/Z-Controller/Time const/value",
               "@units": "/Z-Controller/Time const/unit"
             }
