--- a/tests/data/nanonis/sts/version_gen_5e_default_config/eln_data.yaml
+++ b/tests/data/nanonis/sts/version_gen_5e_default_config/eln_data.yaml
@@ -7,13 +7,11 @@ Sample:
     sample_component:
       description: <p>Description of the sample component</p>
       name: DemoSampleComponent
-collection_identifier:
-  identifier: STSCollectionIdentifier-1234
+identifier_collection: STSCollectionIdentifier-1234
 default: current_grad
 definition: NXsts
 experiment_description: <p>The experiment description is here.</p>
-experiment_identifier:
-  identifier: STSExperimentIdentifier-1234
+identifier_experiment: STSExperimentIdentifier-1234
 experiment_instrument:
   hardware:
     model: Generic 5e
