--- a/src/pynxtools_spm/nomad/examples/stm/STMDefaultExample/STM.scheme.archive.yaml
+++ b/src/pynxtools_spm/nomad/examples/stm/STMDefaultExample/STM.scheme.archive.yaml
@@ -64,7 +64,7 @@ definitions:
             600 steps, locked Au(111), 50pA, 100 mV set point, 1mV DCA, 973Hz,138
             1st H, -84 2nd H.
       sub_sections:
-        experiment_identifier:
+        identifier_experiment:
           section:
             m_annotations:
               eln:
@@ -78,7 +78,7 @@ definitions:
                 description: |
                   An unique identifier fot the experiment. e.g. the identifier
                   could be specific for a lab or experiment team.
-        collection_identifier:
+        identifier_collection:
           section:
             m_annotations:
               eln:
