--- a/tests/data/nanonis/sts/version_gen_5e_with_described_nxdata/eln_data.yaml
+++ b/tests/data/nanonis/sts/version_gen_5e_with_described_nxdata/eln_data.yaml
@@ -1,6 +1,7 @@
 Sample:
   History:
-    notes: <p>Sample history goes here.</p>
+    Notes: 
+      description: <p>Sample history goes here.</p>
   description: <p>Sample Description</p>
   name: DemoName
   sample_component_set:
