--- a/src/pynxtools_spm/nomad/examples/afm/AFMDefaultExample/eln_data.yaml
+++ b/src/pynxtools_spm/nomad/examples/afm/AFMDefaultExample/eln_data.yaml
@@ -7,12 +7,12 @@ Sample:
     sample_component:
       description: <p>Description</p>
       name: DemoComponent
-collection_identifier:
+identifier_collection:
   identifier: DemoCollectionIdentifier-1234
 default: current_forward
 definition: NXafm
 experiment_description: <p>Experiment Description</p>
-experiment_identifier:
+identifier_experiment:
   identifier: DemoExperimentIdentifier-1234
 experiment_instrument:
   hardware:
