--- a/src/pynxtools_spm/nomad/examples/afm/AFMExampleWithCustomization/eln_data.yaml
+++ b/src/pynxtools_spm/nomad/examples/afm/AFMExampleWithCustomization/eln_data.yaml
@@ -6,7 +6,7 @@ Sample:
     sample_component:
       description: <p>Description</p>
       name: DemoComponent
-collection_identifier:
+identifier_collection:
   identifier: C:\AFM\_data\201510
 default: current_forward
 definition: NXafm
@@ -18,7 +18,7 @@ experiment_description: '<p>The experiment is performed with a cantilever that h
   <p>Bias is -9.000E-4 V.</p>
 
   <p>&nbsp;</p>'
-experiment_identifier:
+identifier_experiment:
   identifier: DemoExperimentIdentifier-1234
 experiment_instrument:
   hardware:
