--- a/src/pynxtools_spm/nomad/examples/stm/STMExampleWithCustomization/eln_data.yaml
+++ b/src/pynxtools_spm/nomad/examples/stm/STMExampleWithCustomization/eln_data.yaml
@@ -7,7 +7,7 @@ Sample:
     sample_component:
       description: <p>Component Description goes here.</p>
       name: DemoComponent
-collection_identifier:
+identifier_collection:
   identifier: D:\DATA\nanonis V45_sessions\Zurich PLL\2023-03-31
 default: current_forward
 definition: NXstm
@@ -23,7 +23,7 @@ experiment_description: '<p>Experiment with</p>
 
   <p>&nbsp; &nbsp; voltage: 10mV (Rms Frequency 831Hz, Phase -31.5deg) S 50mV Tcons
   10mS</p>'
-experiment_identifier:
+identifier_experiment:
   identifier: D:\DATA\nanonis V45_sessions\Zurich PLL\2023-03-31\2023_03_31_oAu(111)__FeBr2_EP1_018.sxm
 experiment_instrument:
   hardware:
