--- a/src/pynxtools_spm/nomad/examples/sts/STSExampleWithCustomization/eln_data.yaml
+++ b/src/pynxtools_spm/nomad/examples/sts/STSExampleWithCustomization/eln_data.yaml
@@ -7,8 +7,7 @@ Sample:
     sample_component:
       description: <p>Description of the sample component</p>
       name: DemoSampleComponent
-collection_identifier:
-  identifier: C:\Users\SPM-PEEM\Desktop\DATA_Nanonis\20220711_CreaTec_Service_Benchmarks_LHe\Nanonis-Session-PMD100-HVHU_CreaTec_Service_PalmaLabBerlin220711
+identifier_collection: C:\Users\SPM-PEEM\Desktop\DATA_Nanonis\20220711_CreaTec_Service_Benchmarks_LHe\Nanonis-Session-PMD100-HVHU_CreaTec_Service_PalmaLabBerlin220711
 default: current_grad
 definition: NXsts
 experiment_description: '<p>Experiment with<br />Setpoints: 50pA</p>
@@ -17,7 +16,7 @@ experiment_description: '<p>Experiment with<br />Setpoints: 50pA</p>
 
   <p>Comment: SYNC &amp; Filter LP 8order WITHDRAW 600 steps, locked Au(111), 50pA,
   100 mV set point, 1mV DCA, 973Hz,138 1st H, -84 2nd H</p>'
-experiment_identifier:
+identifier_experiment:
   identifier: C:\Users\SPM-PEEM\Desktop\DATA_Nanonis\20220711_CreaTec_Service_Benchmarks_LHe\Nanonis-Session-PMD100-HVHU_CreaTec_Service_PalmaLabBerlin
 experiment_instrument:
   hardware:
